tests/paczka2/big_fuzzy/14134462.err
Error in line 3: po6edGr S211 45,1
Error in line 28: vHZPHG A12 69,30
Error in line 25: vtqNmcPPNgS A712 93,2
Error in line 31: w3FUJ A938 175,5
Error in line 24: vHZPHG S211 17,1
Error in line 33: vHZPHG A12 62,1
Error in line 37: po6edGr A12 55,1
Error in line 45: po6edGr A712 37,9
Error in line 49: WSKcxd A12 60,6
Error in line 53: WSKcxd A712 24,20
Error in line 62: A712 A938 1,9
Error in line 57: w3FUJ A712 42,2
Error in line 69: w3FUJ S211 84,5
Error in line 51: WSKcxd A712 5,6
Error in line 70: w3FUJ A12 98,3
Error in line 75: QcLle A712 44,8
Error in line 74: WSKcxd A938 85,1
Error in line 83: WSKcxd A12 89,9
Error in line 86: QcLle A712 48,1
Error in line 87: QcLle A938 49,4
Error in line 97: QcLle S211 102,8
Error in line 77: A712 A712 28,4
Error in line 102: vtqNmcPPNgS A938 65,4
Error in line 101: QcLle A12 23,1
Error in line 113: w3FUJ A938 23,1
Error in line 99: WSKcxd A938 4,6
Error in line 114: A712 A712 66,8
Error in line 116: po6edGr A12 90,3
Error in line 109: vtqNmcPPNgS A12 72,6
Error in line 134: w3FUJ A12 74,1
Error in line 151: QcLle S211 n3,5
Error in line 146: w3FUJ S211 58,1
Error in line 156: vHZPHG A12 30,8
Error in line 164: QcLle A938 9,1
Error in line 172: vtqNmcPPNgS A12 43,8
Error in line 145: A712 S211 20,9
Error in line 193: QcLle A712 64,7
Error in line 211: vHZPHG A12 70,0
Error in line 205: w3FUJ A938 17,7
Error in line 214: w3FUJ S211 70,5
Error in line 223: vtqNmcPPNgS S211 49,1
Error in line 222: QcLle S211 66,3
Error in line 224: vtqNmcPPNgS A12 24,9
Error in line 231: WSKcxd A712 20,2
Error in line 225: po6edGr A938 1648,8
Error in line 234: WSKcxd A938 36,7
Error in line 239: po6edGr A712 -2,4
Error in line 242: WSKcxd S211 86,1
Error in line 233: w3FUJ A938 52,0
Error in line 244: w3FUJ A712 26,9
Error in line 237: po6edGr A712 52,1
Error in line 235: A712 A712 77,8
Error in line 249: A712 A938 43,7
